k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-demo-service
  namespace: jenkins-demo
spec:
  selector:
    app: jenkins-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
